Fixed spacing of product tiles

--- a/a1-rentals/src/app/homepage/homepage.component.css
+++ b/a1-rentals/src/app/homepage/homepage.component.css
@@ -4,7 +4,6 @@
 
 .tiles {
     float: left;
-    margin-left: 68px;
-    margin-right: 68px;
-    margin-top: 56px
+    margin: 4% 4%;
+    overflow: auto;
 }
