--- a/a1-rentals/src/app/product-tile/product-tile.component.css
+++ b/a1-rentals/src/app/product-tile/product-tile.component.css
@@ -11,8 +11,8 @@ h2 {
     display: table-cell;
     height: 400px;
     max-height: 400px;
-    max-width: 500px;
+    max-width: 475px;
     text-align: center;
     vertical-align: middle;
-    width: 500px;
+    width: 475px;
 }
